--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 		</main>
 	</div>
 </div>
-<script src="js/sidemenu.min.js"></script>
+<script src="js/sidemenu.js"></script>
 <script>
-	SIDE_MENU.MODULE({
+	SIDE_MENU.METHOD({
 		mainId: 'container',
 		slideCls: 'slide',
 		menuId: 'side',
